# advent-of-code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: aoc_2021.yml  aoc_2022.yml  aoc_2023.yml  aoc_2024.yml  aoc_2025.yml  bin.yml  scaffold.yml
aoc_2021/: Cargo.toml  todo.md
aoc_2021/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  lib.rs
aoc_2021/src/aoc_lib/: matrix.rs  mod.rs  point.rs
aoc_2022/: Cargo.toml
aoc_2022/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc_2022/src/aoc_lib/: matrix.rs  mod.rs  point.rs  point3.rs
aoc_2023/: Cargo.toml
aoc_2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc_2023/src/aoc_lib/: direction.rs  matrix.rs  mod.rs  regex.rs
aoc_2024/: Cargo.toml
aoc_2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc_2025/: Cargo.toml
aoc_2025/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  lib.rs
aoc_lib/: Cargo.toml
aoc_lib/src/: lib.rs  line.rs  math.rs  matrix.rs  regex.rs  vector.rs
aoc_lib/src/direction/: cardinal.rs  mod.rs  ordinal.rs
common/src/: answer.rs  lib.rs  misc.rs  part.rs  solution.rs
data/: 02.txt  09.txt
data/2021/: 05.txt  07.txt  08.txt  11.txt  13.txt  14.txt
data/2022/: 01.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
data/2023/: 01.txt  02.txt  05.txt
scaffold/: Cargo.toml  template.txt  todo.md
scaffold/src/: args.rs  formatter.rs  main.rs  misc.rs  session.rs
scaffold/src/commands/: init.rs  mod.rs  submit.rs  timer.rs  token.rs  verify.rs
src/: args.rs  common.rs  main.rs  problem.rs
src/commands/: list.rs  mod.rs  run.rs  run_all.rs
src/lib/: line.rs  mod.rs  point.rs  point3.rs
src/solutions/: day_01.rs  day_01_a.rs  day_01_b.rs  day_02.rs  day_02_a.rs  day_02_b.rs  day_03.rs  day_03_a.rs  day_03_b.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  mod.rs
src/solutions/year_2021/: day_01.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_13.rs  day_14.rs  mod.rs
src/solutions/year_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
