[package]
edition = "2021"
name = "advent_of_code"
version = "0.1.0"

[workspace]
members = ["scaffold", "common", "aoc_lib", "aoc_2021", "aoc_2022", "aoc_2023"]

[dependencies]
common = { path = "common" }
aoc_2021 = { path = "aoc_2021" }
aoc_2022 = { path = "aoc_2022" }
aoc_2023 = { path = "aoc_2023" }

clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.31"
anyhow = "1.0.75"
