[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_lib = { path = "../aoc_lib" }
common = { path = "../common" }

bitvec = "1.0.1"
indoc = "2.0.4"
itertools = "0.12.0"
nd_vec = "0.4.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
petgraph = "0.6.4"
polynomial = "0.2.6"
rayon = "1.8.0"
regex = "1.10.2"
rustworkx-core = "0.13.2"
