[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
globalenv = "0.4.2"
once_cell = "1.18.0"
scraper = "0.18.1"
ureq = "2.9.1"
url = { version = "2.5.0", features = ["serde"] }
