[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
common = { path = "../common" }
globalenv = "0.4.2"
humantime = "2.1.0"
once_cell = "1.18.0"
regex = "1.10.2"
scraper = "0.18.1"
shell-words = "1.1.0"
ureq = "2.9.1"
url = { version = "2.5.0", features = ["serde"] }
which = "5.0.0"
